--- a/styles/globals.css
+++ b/styles/globals.css
@@ -200,5 +200,11 @@ padding: 0px !important;
 
 .sidebarclr .MuiPaper-root {
   background: #5B6073;
-  border-radius: 0px 50px 50px 0px;
+  border-radius: 0px 0px 30px 0px;
+}
+
+
+@media only screen and (min-width: 768px) {
+ 
+
 }
